# mafi

./: Cargo.toml  README.md  update.sh
.github/workflows/: ci.yml  deploy.yml
backend/src/: lib.rs  main.rs
backend/src/game/: action.rs  action_consequence.rs  action_limitation.rs  action_type.rs  add_action_to_game_request_dto.rs  effect_type.rs  game.rs  game_rules.rs  game_stage.rs  game_status.rs  information_type.rs  mod.rs  player.rs
backend/src/lobby/: add_role_to_lobby_request_dto.rs  controller.rs  create_lobby_request_dto.rs  lobby.rs  mod.rs  remove_role_from_lobby_request_dto.rs
backend/src/roles/: mod.rs  role.rs
backend/src/user/: controller.rs  mod.rs  user.rs  user_repository.rs
backend/tests/: common.rs  health_check.rs
src/: app_exception.rs  lib.rs  main.rs
src/game/: controller.rs  game.rs  game_repository.rs
src/lobby/: lobby_repository.rs  mod.rs
src/roles/: controller.rs  role.rs
src/user/: register_user_request_dto.rs
tests/: user.rs
web/: .eslintrc.json  next.config.js  package-lock.json  package.json
web/clients/: mafi_client.ts
web/pages/: _app.js  index.js  login.js
web/pages/lobby/: create.js  index.js
web/pages/lobby/[lobby-id]/: index.js
web/pages/lobby/[lobby-id]/game/: [game-id].js  index.js
web/pages/lobby/[lobbyId]/: index.js
web/pages/lobby/[lobbyId]/game/: [gameId].js
