[package]
name = "mafi"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "mafi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.4.8", features = ["headers"] }
hyper = { version = "0.14.17", features = ["full"] }
tokio = { version = "1.17.0", features = ["full"] }
tower = "0.4.12"
tracing = "0.1.13"
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
uuid = { version = "0.8.2", features = ["v4", "serde"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
anyhow = "1.0.55"
strum_macros = "0.24.0"
strum = { version = "0.24", features = ["derive"] }
axum-macros = "0.1.2"
async-trait = "0.1.52"
rand = "0.8.5"
